--- a/source/_patterns/01-molecules/05-navigation/06-responsive-dropdown.mustache
+++ b/source/_patterns/01-molecules/05-navigation/06-responsive-dropdown.mustache
@@ -22,6 +22,9 @@
 			</ul>
 		</li>
 		<li>
+			<a href="">Valinta</a>
+		</li>
+		<li>
 			<a href="#">Valinta 3</a>
 			<a href="#" class="sub-nav-trigger"><i class="icon-menu-arrow"></i><span class="is-vishidden">Alavalikko</span></a>
 			<ul>
