--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -75,6 +75,11 @@
 		padding: 13px 0;
 		top: 0;
 		position: absolute;
+		max-width: 100%;
+
+		@media screen and (max-width: 340px){
+			max-width: 70%;
+		}
 
 		@media #{$tablet}{
 			width: 50%;
@@ -160,6 +165,7 @@
 			height: 280px;
 				.expanding{
 					height: 216px;
+					border-top: 2px solid $white;
 				}
 			&.expanded-full-navi{
 				height: 400px;
@@ -167,6 +173,12 @@
 					height: 336px;
 				}
 			}
+		}
+	}
+
+	.expanding{ border-top: 2px solid $white;
+		.section{
+			border-top: 0;
 		}
 	}
 
@@ -178,11 +190,11 @@
 
 		@media #{$tablet}{
 			display: inline-block;
-			padding: 0 13px;
+			padding: 0 13px 3px;
 			margin: 8px 4px 0 0;
 		}
 		@media #{$laptop}{
-			padding: 0 20px;
+			padding: 0 20px 3px;
 			margin: 8px 8px 0 0;
 		}
 	}
@@ -223,7 +235,7 @@
 				span{ display: none; opacity: 0; }
 			}
 
-			@media #{$tablet}{ padding: 6px 6px 0px;
+			@media #{$tablet}{ padding: 6px 6px 3px;
 				border-left: 1px solid #5A5A5A;
 				border-right: 1px solid #000000;
 				&:first-child{ padding-left: 5px; }
