fixed border top on nav too

--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -176,9 +176,9 @@
 		}
 	}
 
-	.expanding{ border-top: 2px solid $white;
+	.expanding{
 		.section{
-			border-top: 0;
+			border-top: 2px solid $white;
 		}
 	}
 
