--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -1,4 +1,4 @@
-<h3>Yleisesti käytössä olevat värit</h3>
+<h3>Yhteiset Värit</h3>
 <ul class="sg-colors global-colors">
 	<li>
 		<span class="sg-swatch color--a"></span>
@@ -16,48 +16,60 @@
 		<span class="sg-swatch color--d"></span>
 		<span class="sg-label">#0089F2</span>
 	</li>
-</ul>
-
-<h3>Ota kantaa -värit</h3>
-<ul class="sg-colors otk-colors">
 	<li>
-		<span class="sg-swatch color--a"></span>
+		<span class="sg-swatch color--e"></span>
 		<span class="sg-label">#FF0000</span>
 	</li>
 	<li>
-		<span class="sg-swatch color--b"></span>
-		<span class="sg-label">#556771</span>
-	</li>
-	<li>
-		<span class="sg-swatch color--c"></span>
-		<span class="sg-label">#17CEE4</span>
-	</li>
-	<li>
-		<span class="sg-swatch color--d"></span>
+		<span class="sg-swatch color--f"></span>
 		<span class="sg-label">#2FC090</span>
 	</li>
 	<li>
-		<span class="sg-swatch color--e"></span>
-		<span class="sg-label">#3FA2FE</span>
+		<span class="sg-swatch color--g"></span>
+		<span class="sg-label">#E3E3E3</span>
 	</li>
 </ul>
 
-<h3>Lausuntopalvelu -värit</h3>
-<ul class="sg-colors lap-colors">
+<h3>Otakantaa</h3>
+<ul class="sg-colors ot-colors">
 	<li>
 		<span class="sg-swatch color--a"></span>
-		<span class="sg-label">#E1EAEF</span>
+		<span class="sg-label">#17CEE4</span>
 	</li>
 	<li>
 		<span class="sg-swatch color--b"></span>
-		<span class="sg-label">#313131</span>
+		<span class="sg-label">#D4DC3F</span>
+	</li>
+</ul>
+
+<h3>Lausuntopalvelu</h3>
+<ul class="sg-colors lap-colors">
+	<li>
+		<span class="sg-swatch color--a"></span>
+		<span class="sg-label">#F16521</span>
+	</li>
+</ul>
+
+<h3>Kansalaisaloite</h3>
+<ul class="sg-colors kaa-colors">
+	<li>
+		<span class="sg-swatch color--a"></span>
+		<span class="sg-label">#077480</span>
 	</li>
 	<li>
-		<span class="sg-swatch color--c"></span>
-		<span class="sg-label">#0891A1</span>
+		<span class="sg-swatch color--b"></span>
+		<span class="sg-label">#BB448E</span>
+	</li>
+</ul>
+
+<h3>Kuntalaisaloite</h3>
+<ul class="sg-colors kua-colors">
+	<li>
+		<span class="sg-swatch color--a"></span>
+		<span class="sg-label">#ADAD2D</span>
 	</li>
 	<li>
-		<span class="sg-swatch color--d"></span>
-		<span class="sg-label">#0F6A9E</span>
+		<span class="sg-swatch color--b"></span>
+		<span class="sg-label">#E2A31C</span>
 	</li>
 </ul>
