Added gallup component

--- a/source/_patterns/01-molecules/06-components/_04-login.mustache
+++ b/source/_patterns/01-molecules/06-components/_04-login.mustache
@@ -41,7 +41,7 @@
 							<input type="submit" name="ctl00$btnLogin" value="OK" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;ctl00$btnLogin&quot;, &quot;&quot;, true, &quot;Login&quot;, &quot;&quot;, false, false))" id="btnLogin" tabindex="3" title="Syötä käyttäjätunnus sekä salasana niille varattuihin kenttiin ja klikkaa OK-nappia,minkä jälkeen siirryt kirjautuneen käyttäjän etusivunäkymään. " class="ctl-btn">
 							<div id="loginProgess" class="update-progress" style="visibility:hidden;display:block;" role="status" aria-hidden="true">
 
-									<img src="img/ajax-loader.gif" id="imgLoginLoader" alt="...">
+									<img src="../../images/ajax-loader.gif" id="imgLoginLoader" alt="...">
 
 			</div>
 
@@ -78,7 +78,7 @@
 							<input type="submit" name="ctl00$btnPasswordRecoverSend" value="Jatka" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;ctl00$btnPasswordRecoverSend&quot;, &quot;&quot;, true, &quot;PasswordRecoverSend&quot;, &quot;&quot;, false, false))" id="btnPasswordRecoverSend" title="Klikkaamalla Jatka-nappia palvelu lähettää sinulle sähköpostiisi linkin, jonka kautta saat uuden salasanan." class="ctl-btn">
 							<div id="passwordRecoverProgress" class="update-progress" style="visibility:hidden;display:block;" role="status" aria-hidden="true">
 
-									<img src="img/ajax-loader.gif" id="imgPasswordRecoverLoader" alt="...">
+									<img src="../../images/ajax-loader.gif" id="imgPasswordRecoverLoader" alt="...">
 
 			</div>
 							<span id="cvEmailFieldDoesntExistsValidator" class="password-recover-validation" style="color:Red;display:none;"></span>
@@ -107,7 +107,7 @@
 							<input type="submit" name="ctl00$btnRegistration" value="Rekisteröidy" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;ctl00$btnRegistration&quot;, &quot;&quot;, true, &quot;Registration&quot;, &quot;&quot;, false, false))" id="btnRegistration" title="Syötä sähköpostiosoitteesi sille varattuun kenttään ja klikkaa Rekisteröidy-painiketta. Palvelu lähettää sähköpostiisi vahvistusviestin, joka sisältää linkin rekisteröitymisen viimeistelemiseksi." class="ctl-btn">
 							<div id="emailValidationProgress" class="update-progress" style="visibility:hidden;display:block;" role="status" aria-hidden="true">
 
-									<img src="img/ajax-loader.gif" id="imgRegistrationLoader" alt="...">
+									<img src="../../images/ajax-loader.gif" id="imgRegistrationLoader" alt="...">
 
 			</div>
 							<span id="cvRegistrationEmail" class="registration-validation" style="color:Red;display:none;"></span>
