--- a/source/css/pasted-styles.css
+++ b/source/css/pasted-styles.css
@@ -489,3 +489,205 @@ body.noscript .topnavi-bar.expanded .close {
         padding-left: 28px;
     }
 
+
+/* Gallup as pasted */
+
+.gallup-date {
+    font-weight: bold;
+}
+
+.gallup-type {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.gallup-question {
+    font-weight: normal;
+    width: 100%;
+    margin-left: 50px;
+}
+
+.gallup-questions td {
+    padding-left: 50px;
+    padding-bottom: 20px;
+    min-height: 33px;
+}
+
+.gallup-stats-header {
+    color: #7F7F7F;
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin-left: 50px;
+}
+
+.gallup-answers {
+    width: 100%;
+    margin-left: 50px;
+}
+
+    .gallup-answers td {
+        width: 100%;
+        padding-bottom: 20px;
+    }
+
+    .gallup-answers .right {
+        white-space: nowrap;
+        padding-right: 30px;
+        padding-left: 10px;
+    }
+
+.gallup-answer {
+    width: 100%;
+    padding-left: 50px;
+}
+
+.gallup-percentage {
+    font-weight: bold;
+    color: #4c4c4c;
+}
+
+.gallup-amounts {
+    font-weight: bold;
+    color: #808080;
+}
+
+.gallup-already-answered {
+    /*background-color: #d2d2d2;
+    padding: 0px 5px 5px 10px;*/
+    font-weight: bold;
+    margin-left: 50px;
+}
+
+.gallup-section {
+    border-bottom: 5px solid #d2d2d2;
+    padding-bottom: 20px;
+    background-color: #f5f5f5;
+}
+
+.gallup-options button {
+    height: 33px;
+    border-radius: 1px;
+    width: 100%;
+    text-align: left;
+    margin: 5px 0;
+}
+
+    .gallup-options button:hover {
+        background-image: -webkit-linear-gradient(top, #00B7CF, #009ab2);
+        background-image: -moz-linear-gradient(top, #00B7CF, #009ab2);
+        background-image: -ms-linear-gradient(top, #00B7CF, #009ab2);
+        background-image: -o-linear-gradient(top, #00B7CF, #009ab2);
+        background-image: linear-gradient(top, #00B7CF, #009ab2);
+        color: #fff !important;
+        border-color: #008aa1;
+    }
+
+.gallup-section .progressbar-bg {
+    width: 450px;
+    height: 33px;
+    border-radius: 1px;
+    color: #fff;
+    line-height: 33px;
+}
+
+    .gallup-section .progressbar-bg .progressbar-progress {
+        height: 100%;
+        border-radius: 1px;
+    }
+
+.gallup-section .progressbar-text {
+    padding: 0 1em;
+}
+
+.progressbar-progress_selected {
+    height: 100%;
+    border-radius: 1px;
+}
+
+.gallup-answers {
+    width: auto;
+}
+
+    .gallup-answers .progressbar-bg {
+        height: 100%;
+        min-height: 33px;
+        line-height: 1.2em;
+        padding: 0;
+        background-repeat: repeat;
+    }
+
+        .gallup-answers .progressbar-bg .progressbar-progress, .gallup-answers .progressbar-bg .progressbar-progress_selected {
+            overflow: visible;
+            min-height: 33px;
+        }
+
+            .gallup-answers .progressbar-bg .progressbar-progress .progressbar-text, .gallup-answers .progressbar-bg .progressbar-progress_selected .progressbar-text {
+                width: 427px;
+                position: relative;
+                padding: 7px 0 7px 13px;
+            }
+
+.gallup-questions .gallup-btn {
+    max-width: 450px;
+    min-width: 450px;
+    white-space: normal;
+    text-align: left;
+    height: auto;
+    min-height: 30px;
+}
+
+.gallup-list-item {
+    padding-bottom: 10px;
+    padding-top: 6px;
+    margin-left: 10px;
+}
+
+.gallup-btn {
+    color: #ffffff;
+    background-color: #00b7cd;
+    border: 1px solid #00b7cd;
+    border-radius: 1px;
+    cursor: pointer;
+    text-align: center;
+    width: 100%;
+}
+
+.participation-item {
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.progressbar-notstarted, .progressbar-ongoing, .progressbar-nearend, .progressbar-ended {
+    display: block;
+    width: 19px;
+    height: 19px;
+    border: none;
+    float: left;
+    content: '';
+    margin-right: 5px;
+}
+
+
+.progressbar-bg {
+    height: 15px;
+    background-color: #d2d2d2;
+}
+
+.progressbar-progress_selected {
+    background-color: #00b7cd;
+    height: 15px;
+}
+
+.progressbar-progress {
+    background-color: #7f7f7f;
+    height: 15px;
+}
+
+.progressbar-text {
+    position: absolute;
+    padding-top: 7px;
+    padding-left: 5px;
+    width: 550px;
+}
+
+
