--- a/source/css/scss/objects/_sections.scss
+++ b/source/css/scss/objects/_sections.scss
@@ -91,11 +91,15 @@
 			background-color: $white;
 			border: 1px solid darken($gray-med, 20%);
 
-			width: 390px;
+			width: 450px;
 
-			@media #{$tablet}{
-				width: 450px;
+			@media screen and (max-width: 460px){
+				width: 370px;
+
+				.progressbar-text{ width: 353px !important; }
 			}
+
+
 			.progressbar-progress{
 				background-color: darken($gray-med, 10%);
 
@@ -106,11 +110,7 @@
 				.progressbar-text{
 					color: $text-color;
 
-					width: 373px;
-
-					@media #{$tablet}{
-						width: 427px;
-					}
+					width: 427px;
 				}
 
 			}
