--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -3,6 +3,11 @@
 	margin-bottom: $space-half;
 }
 
+.inline-element{
+	display: inline-block;
+	margin-bottom: $space-half;
+}
+
 .brick {
 	background: #dcdddc;
 	padding: $pad-double;
