--- a/source/css/scss/objects/_text.scss
+++ b/source/css/scss/objects/_text.scss
@@ -109,7 +109,7 @@ $fadeout-space: 70px;
 
 		&:after{
 			color: $text-color;
-			border-radius: 11px;
+			border-radius: 50%;
 			font-size: 1.125em;
 			display: inline-block;
 			border: 1px solid $text-color;
