--- a/public/patterns/02-organisms-03-sections-05-event-lift/02-organisms-03-sections-05-event-lift.mustache
+++ b/public/patterns/02-organisms-03-sections-05-event-lift/02-organisms-03-sections-05-event-lift.mustache
@@ -1,3 +1,80 @@
 &lt;div class=&quot;event-section&quot;&gt;
-
+	&lt;div class=&quot;event-header&quot;&gt;
+		&lt;div class=&quot;inline-element event-title&quot;&gt;
+			&lt;div class=&quot;form-element&quot;&gt;
+				&lt;label for=&quot;textarea&quot;&gt;Tapahtuman otsikko&lt;/label&gt;
+				&lt;textarea class=&quot;js-dynamic ta-small&quot; maxlength=&quot;155&quot;&gt;&lt;/textarea&gt;
+			&lt;/div&gt;
+			&lt;div class=&quot;edit-event&quot;&gt;
+				&lt;label class=&quot;edit-file-button&quot;&gt;Tallenna ja palaa&lt;/label&gt;
+			&lt;/div&gt;
+		&lt;/div&gt;
+		&lt;div class=&quot;form-element event-description&quot;&gt;
+			&lt;div class=&quot;helper-container&quot;&gt;
+				&lt;span class=&quot;icon-help&quot; title=&quot;Example tip text.&quot; placement=&quot;top&quot;&gt;
+					Esittely
+				&lt;/span&gt;
+				&lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&auml;ss&auml; aputeksti. Aputeksti auttaa suuresti k&auml;ytt&auml;j&auml;&auml;.&lt;/p&gt;
+				&lt;textarea class=&quot;js-dynamic&quot; maxlength=&quot;400&quot;&gt;&lt;/textarea&gt;
+			&lt;/div&gt;
+		&lt;/div&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;event-body&quot;&gt;
+		&lt;div class=&quot;helper-container&quot;&gt;
+			&lt;span class=&quot;icon-help&quot; title=&quot;Example tip text.&quot; placement=&quot;top&quot;&gt;
+				Tapahtuman aikataulu
+			&lt;/span&gt;
+			&lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&auml;ss&auml; aputeksti. Aputeksti auttaa suuresti k&auml;ytt&auml;j&auml;&auml;.&lt;/p&gt;
+		&lt;/div&gt;
+		&lt;div class=&quot;event-date-container cf&quot;&gt;
+			&lt;div class=&quot;form-element date-element left-block float-left&quot;&gt;
+				&lt;label for=&quot;date-picker&quot;&gt;Tapahtuman alkupvm.&lt;/label&gt;
+				&lt;input type=&quot;text&quot; id=&quot;date-picker&quot; class=&quot;datepicker&quot; value=&quot;24.5.2014&quot;&gt;
+			&lt;/div&gt;
+			&lt;div class=&quot;form-element date-element right-block float-right&quot;&gt;
+				&lt;label for=&quot;date-picker&quot;&gt;Tapahtuman loppupvm.&lt;/label&gt;
+				&lt;input type=&quot;text&quot; id=&quot;date-picker&quot; class=&quot;datepicker&quot; value=&quot;24.5.2014&quot;&gt;
+			&lt;/div&gt;
+		&lt;/div&gt;
+		&lt;div class=&quot;event-location-container cf&quot;&gt;
+			&lt;div class=&quot;left-block float-left&quot;&gt;
+				&lt;div class=&quot;form-element&quot;&gt;
+					&lt;textarea class=&quot;ta-small&quot; maxlength=&quot;15&quot; placeholder=&quot;Tapahtumapaikka&quot;&gt;&lt;/textarea&gt;
+				&lt;/div&gt;
+				&lt;div class=&quot;form-element&quot;&gt;
+					&lt;textarea class=&quot;ta-small&quot; maxlength=&quot;15&quot; placeholder=&quot;Katuosoite&quot;&gt;&lt;/textarea&gt;
+				&lt;/div&gt;
+				&lt;div class=&quot;form-element&quot;&gt;
+					&lt;textarea class=&quot;ta-small&quot; maxlength=&quot;15&quot; placeholder=&quot;Postiosoite ja postitoimipaikka&quot;&gt;&lt;/textarea&gt;
+				&lt;/div&gt;
+			&lt;/div&gt;
+			&lt;div class=&quot;right-block float-right&quot;&gt;
+				&lt;img src=&quot;{{ img.square.src }}&quot; alt=&quot;{{ img.square.alt }}&quot; /&gt;
+			&lt;/div&gt;
+		&lt;/div&gt;
+		&lt;div class=&quot;form-element&quot;&gt;
+			&lt;div class=&quot;helper-container&quot;&gt;
+				&lt;span class=&quot;icon-help&quot; title=&quot;Example tip text.&quot; placement=&quot;top&quot;&gt;
+					Et&auml;osallistuminen
+				&lt;/span&gt;
+				&lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&auml;ss&auml; aputeksti. Aputeksti auttaa suuresti k&auml;ytt&auml;j&auml;&auml;.&lt;/p&gt;
+			&lt;/div&gt;
+			&lt;!-- Editor here --&gt;
+			&lt;textarea class=&quot;js-dynamic&quot; maxlength=&quot;400&quot;&gt;&lt;/textarea&gt;
+		&lt;/div&gt;
+		&lt;div class=&quot;form-element&quot;&gt;
+			&lt;div class=&quot;helper-container&quot;&gt;
+				&lt;span class=&quot;icon-help&quot; title=&quot;Example tip text.&quot; placement=&quot;top&quot;&gt;
+					Et&auml;osallistuminen
+				&lt;/span&gt;
+				&lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&auml;ss&auml; aputeksti. Aputeksti auttaa suuresti k&auml;ytt&auml;j&auml;&auml;.&lt;/p&gt;
+			&lt;/div&gt;
+			&lt;!-- Editor here --&gt;
+			&lt;textarea class=&quot;js-dynamic&quot; maxlength=&quot;400&quot;&gt;&lt;/textarea&gt;
+		&lt;/div&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;event-actions float-right&quot;&gt;
+		&lt;input type=&quot;submit&quot; class=&quot;btn&quot; value=&quot;Peruuta&quot;&gt;
+		&lt;input type=&quot;submit&quot; class=&quot;btn&quot; value=&quot;Julkaise&quot;&gt;
+	&lt;/div&gt;
 &lt;/div&gt;
