--- a/source/_patterns/00-atoms/05-forms/_09-date.mustache
+++ b/source/_patterns/00-atoms/05-forms/_09-date.mustache
@@ -1,4 +1,4 @@
-<div class="form-element">
-	<label for="date-picker">Valitse päivämäärä. Oletuspäivämäärän voit asettaa antamalla value-kentälle arvoksi esim. 25.6.2014 tai 25/6/2014</label>
+<div class="form-element date-element">
+	<label for="date-picker">Valitse päivämäärä. <span class="is-vishidden"> Oletuspäivämäärän voit asettaa antamalla value-kentälle arvoksi esim. 25.6.2014 tai 25/6/2014</span></label>
 	<input type="text" id="date-picker" class="datepicker" value="24.5.2014">
 </div>
