--- a/source/css/scss/base/_global-classes.scss
+++ b/source/css/scss/base/_global-classes.scss
@@ -38,10 +38,19 @@
 }
 
 /* Floats */
+.float-right {
+	float: right;
+	padding: 0 0 $pad $pad;
+}
 
 .right-search {
 	float: right;
 	padding: 0 0 $pad 0;
+}
+
+.float-left {
+	float: left;
+	padding: 0 $pad $pad 0;
 }
 
 /* Text-Align */
