Committing changes before merge. All changes to event lift

--- a/source/_patterns/02-organisms/03-sections/05-event-lift.mustache
+++ b/source/_patterns/02-organisms/03-sections/05-event-lift.mustache
@@ -1,12 +1,12 @@
 <div class="event-section">
 	<div class="event-header">
-		<div class="inline-element event-title">
-			<div class="form-element">
+		<div class="inline-element event-title-container">
+			<div class="form-element event-title">
 				<label for="textarea">Tapahtuman otsikko</label>
 				<textarea class="js-dynamic ta-small" maxlength="155"></textarea>
 			</div>
 			<div class="edit-event">
-				<label class="edit-file-button">Tallenna ja palaa</label>
+				<a class="edit">Tallenna ja palaa</a>
 			</div>
 		</div>
 		<div class="form-element event-description">
