Removed useless default alt button

--- a/source/_patterns/00-atoms/06-buttons/00-buttons.mustache
+++ b/source/_patterns/00-atoms/06-buttons/00-buttons.mustache
@@ -2,7 +2,7 @@
 
 <h4>Tumma tyyli</h4>
 <p><a href="#" class="btn">Button</a></p>
-<p><a href="#" class="btn alt">Alt Button</a></p>
+<!-- <p><a href="#" class="btn alt">Alt Button</a></p> -->
 <p><a href="#" class="btn disabled">Disabled Button</a></p>
 <p><a href="#" class="btn"><i class="icon-search"></i>Button</a></p>
 <p><a href="#" class="btn sub-text">Button<span>Lisäinfoa tässä kentässä</span></a></p>
