Added inputs as button group

--- a/source/_patterns/00-atoms/06-buttons/01-button-groups.mustache
+++ b/source/_patterns/00-atoms/06-buttons/01-button-groups.mustache
@@ -7,6 +7,15 @@
 	<a href="#">Painike 6</a>
 </div>
 
+<h4>Painikeryhmä inputeista</h4>
+
+<div class="btn-group">
+	<input class="active" type="submit" value="Muokkaa perustietoja">
+	<input type="submit" value="Kirjoita yhteenveto">
+	<input type="submit" value="Lisää kieliversio">
+	<input type="submit" value="Osallistumisraportti">
+</div>
+
 <div class="btn-group enlarged">
 	<a href="#" class="active">Painike 1<span class="count">A</span></a>
 	<a href="#">Painike 2<span class="count">B</span></a>
@@ -28,6 +37,8 @@
 		<option value="1">Vain kutsutuille</option>
 	</select>
 </div>
+
+
 
 <form>
 	<h4>Checkbox-painikkeet</h4>
