Added couple of list styles for icon-lift and changed .icon-lift to button-lift which is not so confusing

--- a/source/_patterns/00-atoms/06-buttons/03-icon-lift.mustache
+++ b/source/_patterns/00-atoms/06-buttons/03-icon-lift.mustache
@@ -1,11 +1,105 @@
-<div class="icon-lift participation">
+<div class="lift-button participation">
 	{{> atoms-count-icon }}
-	<a class="icon-lift-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</a>
+	<a class="lift-button-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</a>
 	<p class="date">26.5. asti</p>
 </div>
 <h4>Tummaa taustaa kutsutaan 'gray-base'-luokalla</h4>
-<div class="icon-lift gray-base participation">
+<div class="lift-button gray-base participation">
 	{{> atoms-count-icon }}
-	<a class="icon-lift-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</a>
+	<a class="lift-button-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</a>
 	<p class="date">26.5. asti</p>
+</div>
+
+<h4>Floated list</h4>
+<div id="showParticipations" class="participations cf">
+	<h2 class="ongoing">
+		Menossa olevat osallistumiset
+	</h2>
+	<div class="lift-button gray-base participation float-left">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">17</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Ympäristön hyvinvointi - miten sitä voidaan...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+	<div class="lift-button gray-base participation float-left">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">24</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+	<div class="lift-button gray-base participation float-left">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">24</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+	<div class="lift-button gray-base participation float-left">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">24</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+	<div class="lift-button gray-base participation float-left">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">24</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+</div>
+
+<h4>Responsive list</h4>
+<div id="showParticipations" class="participations responsive-list-block">
+	<h2 class="ongoing">
+		Menossa olevat osallistumiset
+	</h2>
+	<div class="lift-button gray-base participation inline-element">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">17</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Ympäristön hyvinvointi - miten sitä voidaan...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+	<div class="lift-button gray-base participation inline-element">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">24</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+	<div class="lift-button gray-base participation inline-element">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">24</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+	<div class="lift-button gray-base participation inline-element">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">24</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+		<span class="date">26.5. asti</span>
+	</div>
+	<div class="lift-button gray-base participation inline-element">
+		<div class="count-container">
+			<span class="icon-span icon-comment"></span>
+			<a href="//www.foo.bar">24</a>
+		</div>
+		<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+		<span class="date">26.5. asti</span>
+	</div>
 </div>
