--- a/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
+++ b/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
@@ -54,31 +54,31 @@
 			<h2 class="ongoing">
 				Menossa olevat osallistumiset
 			</h2>
-			<div class="icon-lift participation">
+			<div class="lift-button participation">
 				<div class="count-container">
 					<span class="icon-span icon-comment"></span>
 					<a href="//www.foo.bar">17</a>
 				</div>
-				<a class="icon-lift-link" href="//www.foo.bar">Ympäristön hyvinvointi - miten sitä voidaan...</a>
+				<a class="lift-button-link" href="//www.foo.bar">Ympäristön hyvinvointi - miten sitä voidaan...</a>
 				<span class="date">26.5. asti</span>
 			</div>
-			<div class="icon-lift participation">
+			<div class="lift-button participation">
 				<div class="count-container">
 					<span class="icon-span icon-comment"></span>
 					<a href="//www.foo.bar">24</a>
 				</div>
-				<a class="icon-lift-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+				<a class="lift-button-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
 				<span class="date">26.5. asti</span>
 			</div>
-			<div class="icon-lift participation">
+			<div class="lift-button participation">
 				<div class="count-container">
 					<span class="icon-span icon-comment"></span>
 					<a href="//www.foo.bar">17</a>
 				</div>
-				<a class="icon-lift-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</a>
+				<a class="lift-button-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</a>
 				<span class="date">26.5. asti</span>
 			</div>
-			<div class="icon-lift participation">
+			<div class="lift-button participation">
 				<div>
 					<span class="icon-span icon-add"></span>
 					<a id="btnAddParticipation">Luo uusi osallistuminen</a>
@@ -90,28 +90,28 @@
 			<h2 class="create">
 				TODO: "Luo uusi osallistuminen"-näkymä tähän
 			</h2>
-			<div class="icon-lift participation">
+			<div class="lift-button participation">
 				<a href="#">
 					<span class="icon">Kysely kuva</span>
 					<p>Kysely</p>
 				</a>
 				<span>Kysely lorem ipsum</span>
 			</div>
-			<div class="icon-lift participation">
+			<div class="lift-button participation">
 				<a href="#">
 					<span class="icon">Gallup kuva</span>
 					<p>Gallup</p>
 				</a>
 				<span>Gallup lorem ipsum</span>
 			</div>
-			<div class="icon-lift participation">
+			<div class="lift-button participation">
 				<a href="#">
 					<span class="icon">Keskustelu kuva</span>
 					<p>Keskustelu</p>
 				</a>
 				<span>Keskustelu lorem ipsum</span>
 			</div>
-			<div class="icon-lift cancel">
+			<div class="lift-button cancel">
 				<a id="btnCancelParticipation">
 					<span class="icon">X</span>
 					<p>Palaa osallistumislistaan</p>
