Added couple of list styles for icon-lift and changed .icon-lift to button-lift which is not so confusing

--- a/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.mustache
+++ b/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.mustache
@@ -54,31 +54,31 @@
 			&lt;h2 class=&quot;ongoing&quot;&gt;
 				Menossa olevat osallistumiset
 			&lt;/h2&gt;
-			&lt;div class=&quot;icon-lift participation&quot;&gt;
+			&lt;div class=&quot;lift-button participation&quot;&gt;
 				&lt;div class=&quot;count-container&quot;&gt;
 					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
 					&lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
 				&lt;/div&gt;
-				&lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&auml;rist&ouml;n hyvinvointi - miten sit&auml; voidaan...&lt;/a&gt;
+				&lt;a class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&auml;rist&ouml;n hyvinvointi - miten sit&auml; voidaan...&lt;/a&gt;
 				&lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
 			&lt;/div&gt;
-			&lt;div class=&quot;icon-lift participation&quot;&gt;
+			&lt;div class=&quot;lift-button participation&quot;&gt;
 				&lt;div class=&quot;count-container&quot;&gt;
 					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
 					&lt;a href=&quot;//www.foo.bar&quot;&gt;24&lt;/a&gt;
 				&lt;/div&gt;
-				&lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Kaupungin asukkaiden hyvinvointi ja osallistu...&lt;/a&gt;
+				&lt;a class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Kaupungin asukkaiden hyvinvointi ja osallistu...&lt;/a&gt;
 				&lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
 			&lt;/div&gt;
-			&lt;div class=&quot;icon-lift participation&quot;&gt;
+			&lt;div class=&quot;lift-button participation&quot;&gt;
 				&lt;div class=&quot;count-container&quot;&gt;
 					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
 					&lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
 				&lt;/div&gt;
-				&lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/a&gt;
+				&lt;a class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/a&gt;
 				&lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
 			&lt;/div&gt;
-			&lt;div class=&quot;icon-lift participation&quot;&gt;
+			&lt;div class=&quot;lift-button participation&quot;&gt;
 				&lt;div&gt;
 					&lt;span class=&quot;icon-span icon-add&quot;&gt;&lt;/span&gt;
 					&lt;a id=&quot;btnAddParticipation&quot;&gt;Luo uusi osallistuminen&lt;/a&gt;
@@ -90,28 +90,28 @@
 			&lt;h2 class=&quot;create&quot;&gt;
 				TODO: &quot;Luo uusi osallistuminen&quot;-n&auml;kym&auml; t&auml;h&auml;n
 			&lt;/h2&gt;
-			&lt;div class=&quot;icon-lift participation&quot;&gt;
+			&lt;div class=&quot;lift-button participation&quot;&gt;
 				&lt;a href=&quot;#&quot;&gt;
 					&lt;span class=&quot;icon&quot;&gt;Kysely kuva&lt;/span&gt;
 					&lt;p&gt;Kysely&lt;/p&gt;
 				&lt;/a&gt;
 				&lt;span&gt;Kysely lorem ipsum&lt;/span&gt;
 			&lt;/div&gt;
-			&lt;div class=&quot;icon-lift participation&quot;&gt;
+			&lt;div class=&quot;lift-button participation&quot;&gt;
 				&lt;a href=&quot;#&quot;&gt;
 					&lt;span class=&quot;icon&quot;&gt;Gallup kuva&lt;/span&gt;
 					&lt;p&gt;Gallup&lt;/p&gt;
 				&lt;/a&gt;
 				&lt;span&gt;Gallup lorem ipsum&lt;/span&gt;
 			&lt;/div&gt;
-			&lt;div class=&quot;icon-lift participation&quot;&gt;
+			&lt;div class=&quot;lift-button participation&quot;&gt;
 				&lt;a href=&quot;#&quot;&gt;
 					&lt;span class=&quot;icon&quot;&gt;Keskustelu kuva&lt;/span&gt;
 					&lt;p&gt;Keskustelu&lt;/p&gt;
 				&lt;/a&gt;
 				&lt;span&gt;Keskustelu lorem ipsum&lt;/span&gt;
 			&lt;/div&gt;
-			&lt;div class=&quot;icon-lift cancel&quot;&gt;
+			&lt;div class=&quot;lift-button cancel&quot;&gt;
 				&lt;a id=&quot;btnCancelParticipation&quot;&gt;
 					&lt;span class=&quot;icon&quot;&gt;X&lt;/span&gt;
 					&lt;p&gt;Palaa osallistumislistaan&lt;/p&gt;
