Added sample MIME icon to attachment

--- a/source/_patterns/01-molecules/04-forms/03-attachment.mustache
+++ b/source/_patterns/01-molecules/04-forms/03-attachment.mustache
@@ -18,7 +18,7 @@
 	<div class="form-element attachment-edit">
 		<label class="edit-file-button">muokkaa</label>
 		<div class="mime-container">
-			<p>MIME-tyypin mukainen ikoni tähän</p>
+			<i class="fa fa-file-o"></i>
 		</div>
 		<a class="file-title">Otsikko</a>
 		<p>tiedostonimi...jpg</p>
