--- a/source/css/scss/base/_forms.scss
+++ b/source/css/scss/base/_forms.scss
@@ -247,6 +247,12 @@ input[type="search"]::-webkit-search-decoration {
 			background-color: $white;
 			margin: 5px 10px;
 			padding: 10px;
+
+			i{
+				font-size: 1.5em;
+				margin-top: 5px;
+				margin-bottom: 5px;
+			}
 		}
 
 		.file-title{ display: inline-block; margin: 10px 0; }
