--- a/source/css/scss/objects/_buttons.scss
+++ b/source/css/scss/objects/_buttons.scss
@@ -1,7 +1,7 @@
 /*------------------------------------*\
     $BUTTONS
 \*------------------------------------*/
-.btn {
+.btn, button{
 	display: inline-block;
 	background: $gray-dark;
 	color: $white;
